<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuideToCaptureImageActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/captureImageToolbar"
            android:background="@color/color_toolbar"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toolbar_capture_image"
                android:layout_gravity="center"
                android:textColor="@color/black_text"
                android:textSize="18dp"
                android:id="@+id/toolbar_title" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TableRow
        android:padding="5dp"
        android:layout_below="@+id/toolbar"
        android:id="@+id/tableRow1"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="15dp"
            android:textStyle="bold|normal"
            android:text="@string/capture_image_title_1"
            android:layout_width="0dp"
            android:layout_weight="0.9"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="15dp"
            android:text="@string/capture_image_title_2"
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"/>

    </TableRow>

    <TableRow
        android:paddingTop="5dp"
        android:layout_below="@+id/tableRow1"
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="15dp"
            android:text="@string/capture_image_front_image"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="15dp"
            android:gravity="center_horizontal"
            android:text="@string/capture_image_behind_image"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

    </TableRow>

    <TableRow
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:paddingBottom="10dp"
        android:layout_below="@+id/tableRow2"
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:background="@drawable/license1"
            android:layout_width="wrap_content"
            android:layout_margin="5dp"
            android:layout_height="120dp"
            android:layout_weight="1"/>

        <ImageView
            android:background="@drawable/license2"
            android:layout_width="wrap_content"
            android:layout_margin="5dp"
            android:layout_height="120dp"
            android:layout_weight="1"/>

    </TableRow>

    <TableRow
        android:padding="5dp"
        android:layout_below="@+id/tableRow3"
        android:id="@+id/tableRow4"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="15dp"
            android:textStyle="bold|normal"
            android:text="@string/capture_image_title_3"
            android:layout_width="0dp"
            android:layout_weight="0.9"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="15dp"
            android:text="@string/capture_image_title_2"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.2"
            android:layout_height="wrap_content"/>

    </TableRow>

    <TableRow
        android:layout_below="@+id/tableRow4"
        android:id="@+id/tableRow5"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="14dp"
            android:text="@string/capture_image_number_1"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:background="@color/background_image_1"
            android:paddingTop="35dp"
            android:paddingBottom="35dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="14dp"
            android:gravity="center_horizontal"
            android:text="@string/capture_image_number_2"
            android:background="@color/background_image_2"
            android:layout_width="0dp"
            android:paddingTop="35dp"
            android:paddingBottom="35dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="14dp"
            android:gravity="center_horizontal"
            android:text="@string/capture_image_number_3"
            android:background="@color/background_image_3"
            android:layout_width="0dp"
            android:paddingTop="35dp"
            android:paddingBottom="35dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="14dp"
            android:gravity="center_horizontal"
            android:text="@string/capture_image_number_4"
            android:background="@color/background_image_4"
            android:layout_width="0dp"
            android:paddingTop="35dp"
            android:paddingBottom="35dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

    </TableRow>

    <TextView
        android:id="@+id/textView"
        android:text="@string/text_guide_screen"
        android:layout_margin="20dp"
        android:textSize="15dp"
        android:layout_below="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/capture_image_Button"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:textSize="20dp"
        android:text="@string/capture_image_button"
        android:background="@drawable/button_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
