<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.prostage.lifecard.SendingDocumentsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/chooseDocumentToolbar"
            android:background="@color/color_toolbar"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toolbar_sending_document"
                android:layout_gravity="center"
                android:textColor="@color/black_text"
                android:textSize="18dp"
                android:id="@+id/toolbar_title" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_below="@+id/toolbar"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="20dp"
            android:text="@string/document_sending_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="20dp"
            android:text="@string/document_sending_content_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spinner_choose_document"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:spinnerMode="dropdown"
            android:background="@drawable/spinner_border"
            android:prompt="@string/spinner_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>

        <LinearLayout
            android:background="@drawable/boder_text"
            android:padding="10dp"
            android:id="@+id/layoutSending"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/explain_choose_document_1"
                android:layout_marginTop="5dp"
                android:textSize="20dp"
                android:text="@string/explain_choose_document_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="20dp"
                android:id="@+id/explain_choose_document_2"
                android:layout_marginTop="5dp"
                android:text="@string/explain_choose_document_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <Button
            android:id="@+id/btn_choose_document"
            android:layout_margin="10dp"
            android:text="@string/next_button"
            android:visibility="gone"
            android:textSize="20dp"
            android:background="@drawable/button_background"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>
