<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.prostage.lifecard.ConfirmStepActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/confirmStepToolbar"
            android:background="@color/color_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toolbar_show_image"
                android:layout_gravity="center"
                android:textColor="@color/black_text"
                android:textSize="18dp"
                android:id="@+id/toolbar_title" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/textConfirm"
        android:layout_below="@+id/toolbar"
        android:text="@string/content_confirm_activity"
        android:padding="15dp"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:layout_marginBottom="30dp"
        android:lineSpacingExtra="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_below="@+id/textConfirm"
        android:background="@drawable/button_background"
        android:layout_margin="10dp"
        android:textSize="20dp"
        android:text="@string/return_btn_confirm_activity"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
