<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.prostage.lifecard.MainActivity">

    <LinearLayout
        android:background="#F8F8F8"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/logo"
            android:layout_width="50dp"
            android:layout_height="50dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutMain"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:background="#D2D2D2"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <View
            android:layout_marginTop="35dp"
            android:background="#D2D2D2"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/textTitle"
            android:text="@string/title_mainView"
            android:paddingLeft="12dp"
            android:paddingTop="12dp"
            android:textColor="@color/textMainActivity"
            android:textSize="20dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_content"
            android:text="@string/content_mainView"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textSize="20dp"
            android:paddingBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_main_activity"
            android:layout_margin="20dp"
            android:text="@string/btn_activity_main"
            android:textSize="20dp"
            android:padding="10dp"
            android:background="@drawable/button_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

</LinearLayout>
